# BasalCellDemo

./: .gitignore  .lintr  .pre-commit-config.yaml  .readthedocs.yaml  Makefile  README.md  basalcelldemo_dependencies.md  environment.yml  pyproject.toml
.basalcell/: conda-lock.yml  requirements.txt
.basalcell/basalcell_system/: __init__.py  _export.py  _path.py  _query.py  _read.py
.github/: pull_request_template.md
.github/workflows/: test.yml
basalcelldemo_rtools/: DESCRIPTION  NAMESPACE  _pkgdown.yml  index.md
basalcelldemo_rtools/R/: sorting.R
basalcelldemo_rtools/man/: sorted_setnames.Rd
basalcelldemo_rtools/tests/testthat/: test_sorting.R
basalcelldemo_rtools/vignettes/: example.Rmd
basalcelldemo_tools/: __init__.py
basalcelldemo_tools/anndata/: __init__.py  _embedding.py
basalcelldemo_tools/celltypist_models/: models.json
basalcelldemo_tools/preferences/: __init__.py  _kwargs.py
basalcelldemo_tools/random/: __init__.py  _seed.py
docs/: conf.py  index.md  notebooks.rst
docs/_build/html/: .buildinfo  authors.html  genindex.html  index.html  notebooks.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree  notebooks.doctree  readme.doctree
docs/auxiliary_api/: basalcelldemo_tools.preferences.rst  basalcelldemo_tools.random.rst
docs/jupyternb/: basalcelldemo_rtools  basalcelldemo_tools
docs/r_api/: authors.md  search.json
docs/r_api/reference/: index.html  sorted_setnames.html  sorted_setnames.md
renv/: settings.json
tests/random/: test_seed.py
(+35 files in other folders)
