[tool.poetry]
name = "basalcelldemo"
version = "0.0.1"
description = "A demonstration of the BasalCell ecosystem through a simple scRNA-seq data analysis."
authors = ["Yuji Okano <yujiokano@keio.jp>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
scanpy = "^1.12.1"
anndata = "^0.12.13"
leidenalg = "^0.11.0"
pynndescent = "^0.6.0"
igraph = "^1.0.0"
polars = "^1.40.1"
pyarrow = "^24.0.0"
celltypist = "^1.7.1"
scikit-image = "^0.26.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.2.0"
ipywidgets = "^8.1.8"
jupyterlab = "^4.5.7"
jupyter-resource-usage = "^1.2.1"
pytest = "^9.0.3"
mypy = "^2.0.0"
ruff = "^0.15.12"
pre-commit = "^4.6.0"
sphinx = "^9.1.0"
sphinx-rtd-theme = "^3.1.0"
sphinx-gallery = "^0.21.0"
nbsphinx = "^0.9.8"
numpydoc = "^1.10.0"
myst-parser = "^5.0.0"
pandoc = "^2.4"
polars = "^1.40.1"
pyarrow = "^24.0.0"
pyyaml = "^6.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["basalcelldemo"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
addopts = ["--doctest-modules", "-v", "--durations=10"]
testpaths = [
    "tests",
    "basalcelldemo_tools",
]
norecursedirs = [".ipynb_checkpoints", "docs", "renv", ".venv", ".git", ".github"]
